# pydantic2-showcase

./: pyproject.toml
misc/: test_custom_validators.py  test_type_adapter.py  test_validate_call.py
pokeclient/v1/: pokeclient.py
pokeclient/v1/models/: pokemon.py
pokeclient/v2/: pokeclient.py  pokemons.csv
pokeclient/v2/models/: pokemon.py
